--- a/CommunityKitchen/Views/Cause/CauseDetails.cshtml
+++ b/CommunityKitchen/Views/Cause/CauseDetails.cshtml
@@ -22,7 +22,7 @@
                 else
                 {
                     <div style="display: flex; justify-content: center;overflow: hidden;">
-                        <img id="imgDetails" style="border-radius: 100px; height: 200px; width: 800px; object-fit: cover;" src="~/Assets/images/ImagesSaved/@Model.Photo" />
+                        <img id="imgDetails"  src="~/Assets/images/ImagesSaved/@Model.Photo" />
                     </div>
                 }
 
