--- a/CommunityKitchen/Views/Event/EventsIndex.cshtml
+++ b/CommunityKitchen/Views/Event/EventsIndex.cshtml
@@ -19,7 +19,7 @@
         <div class="item-list">
             <div class="item wow fadeInUp animated" style="visibility: visible; animation-name: fadeInUp;">
                 <div class="bg-area">
-                    <div class="image-box">
+                    <div class="image-box" style="border-radius: 50px">
                         <img src="~/Assets/Selection/events1.jpg" />
                         <div class="overlay">
                             <div class="box">
@@ -51,7 +51,7 @@
                                         else
                                         {
                                             <div>
-                                                <img style="border-radius: 50px; height: 432px; width: 768px; object-fit: contain; " src="~/Assets/images/ImagesSaved/@eve.Photo" alt="Can not load image" />
+                                                <img style="border-radius: 50px; height: 432px; width: 776px; object-fit:cover; " src="~/Assets/images/ImagesSaved/@eve.Photo" alt="Can not load image" />
                                             </div>
                                         }
 
