--- a/CommunityKitchen/Views/Cause/OrganizeCause.cshtml
+++ b/CommunityKitchen/Views/Cause/OrganizeCause.cshtml
@@ -27,30 +27,38 @@
                     @foreach (var cause in Model)
                     {
 
-                    <div class="content-box">
+                        <div class="content-box">
 
-                        <a href="@Url.Action("CauseDetails","Cause",new {id = @cause.Id})"> <h3 class="RedTitle">@cause.Title</h3></a>
-                        <ul class="cause-info">
-                        </ul>
-                        <div class="text">
-                            <p>@cause.Description</p>
+                            <a href="@Url.Action("CauseDetails","Cause",new {id = @cause.Id})"> <h3 class="RedTitle">@cause.Title</h3></a>
+                            <ul class="cause-info">
+                            </ul>
+                            <div class="text">
+                                <p>@cause.Description</p>
+                            </div>
+                            @if (cause.Photo == null)
+                            {
+                                <div style="display:hidden"></div>
+                            }
+                            else
+                            {
+                        <div style="text-align: left">
+                            <img id="imgcause" style="border-radius: 15px; height: 432px; width: 768px; object-fit: contain; " src="~/Assets/images/ImagesSaved/@cause.Photo" alt="Image couldn't render" />
                         </div>
-                        <div>
-                            @Html.DisplayFor(modelItem => @cause.Photo)
+                            }
+                            <div style="padding-top:10px; padding-bottom:10px;">
+                                <strong>Target Goal: </strong>
+                                @Html.DisplayFor(modelItem => @cause.TargetGoal)
+                                <br />
+                                <strong>Current Ammount: </strong>
+                                @Html.DisplayFor(modelItem => @cause.CurrentAmmount)
+                            </div>
+                            <div>
+                                <a href="@Url.Action("EditCause","Cause",new {id = @cause.Id})" class="thm-btn style-2">Edit Cause</a>
+                                <a href="@Url.Action("DeleteCause","Cause",new {id = cause.Id})" class="thm-btn style-1">Delete  Cause</a>
+                            </div>
                         </div>
-                        <div>
-                            <strong>Target Goal: </strong>
-                            @Html.DisplayFor(modelItem => @cause.TargetGoal)                        
-                            <strong>Current Ammount: </strong>
-                            @Html.DisplayFor(modelItem => @cause.CurrentAmmount)
-                        </div>
-                        <div>
-                            <a href="@Url.Action("EditCause","Cause",new {id = @cause.Id})" class="thm-btn style-2">Edit Cause</a>
-                            <a href="@Url.Action("DeleteCause","Cause",new {id = cause.Id})" class="thm-btn style-1">Delete  Cause</a>
-                        </div>
-                    </div>
-                    <hr />
-                    <br />
+                        <hr />
+                        <br />
                     }
 
                 </div>
