button on contact

--- a/CommunityKitchen/Views/Home/Contact.cshtml
+++ b/CommunityKitchen/Views/Home/Contact.cshtml
@@ -99,7 +99,7 @@
                     <div class="col-md-12 col-sm-12 col-xs-12">
                         <div class="form-group">
                             <input id="form_botcheck" name="form_botcheck" class="form-control" type="hidden" value="">
-                            <button class="thm-btn" type="submit" data-loading-text="Please wait...">send message</button>
+                            <button onclick="document.getElementById('id01').style.display='block'" class="thm-btn" type="submit" data-loading-text="Please wait...">send message</button>
                         </div>
                     </div>
 
