--- a/CommunityKitchen/Views/Shared/Components/_Footer.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_Footer.cshtml
@@ -87,15 +87,15 @@
                                 <ul class="list">
                                     <li>
                                         <h5>Food is Giving to them</h5>
-                                        <p> <span>July 29, 2017   BY Donald</span></p>
+                                        <p> <span>July 29, 2017</span></p>
                                     </li>
                                     <li>
                                         <h5>Buy some candy for children</h5>
-                                        <p> February 15, 2017   BY <span>M_Themes</span></p>
+                                        <p> <span>February 15, 2017</span></p>
                                     </li>
                                     <li>
                                         <h5>Build a building for shelter</h5>
-                                        <p><span> July 29, 2017   BY Donald</span></p>
+                                        <p><span> July 29, 2017</span></p>
                                     </li>
                                 </ul>
                             </div>
@@ -243,7 +243,7 @@
     <div class="footer-bottom">
         <div class="container">
             <div class="text">
-                <p><span>charitysympathy</span> 2022. All Rights Reserved</p>
+                <p><span>Community Kitchen</span> 2022. All Rights Reserved</p>
             </div>
         </div><!-- /.container -->
     </div>
