--- a/CommunityKitchen/Views/Shared/Components/_LogoMain.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_LogoMain.cshtml
@@ -5,6 +5,6 @@
 
 <div class="col-md-3">
     <div class="main-logo">
-        <a href=@Url.Action("Index","Home")><img src="~/Assets/images/logo/logo.png" alt=""></a>
+        <a class="" href=@Url.Action("Index","Home")><img src="~/Assets/images/logo/logo.png" alt=""></a>
     </div>
 </div>
