--- a/CommunityKitchen/Views/Home/Contact.cshtml
+++ b/CommunityKitchen/Views/Home/Contact.cshtml
@@ -68,17 +68,17 @@
             <h2>Leave us a message</h2>
         </div>
         <div class="default-form-area">
-            <form id="contact-form" name="contact_form" class="default-form" action="sendmail.php" method="post">
+            <form id="contact-form" name="contact_form" class="default-form" method="post">
                 <div class="row clearfix">
                     <div class="col-md-6 col-sm-6 col-xs-12">
 
                         <div class="form-group">
-                            <input type="text" name="form_name" class="form-control" value="" placeholder="Your Name" required="">
+                            <input id="reqname" type="text" name="form_name" class="form-control" value="" placeholder="Your Name" required="">
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <div class="form-group">
-                            <input type="email" name="form_email" class="form-control required email" value="" placeholder="Your Mail" required="">
+                            <input id="reqmail" type="email" name="form_email" class="form-control required email" value="" placeholder="Your Mail" required="">
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-6 col-xs-12">
@@ -93,13 +93,16 @@
                     </div>
                     <div class="col-md-12 col-sm-12 col-xs-12">
                         <div class="form-group">
-                            <textarea name="form_message" class="form-control textarea required" placeholder="Your Message...."></textarea>
+                            <textarea id="reqmessage" name="form_message" class="form-control textarea required" placeholder="Your Message...."></textarea>
                         </div>
                     </div>
                     <div class="col-md-12 col-sm-12 col-xs-12">
                         <div class="form-group">
                             <input id="form_botcheck" name="form_botcheck" class="form-control" type="hidden" value="">
-                            <button onclick="document.getElementById('id01').style.display='block'" class="thm-btn" type="submit" data-loading-text="Please wait...">send message</button>
+                            
+                            
+                            <button id="butt" onclick="document.getElementById('id01').style.display='block'" class="thm-btn" type="submit" data-loading-text="Please wait..." disabled>send message</button>
+                            
                         </div>
                     </div>
 
@@ -119,4 +122,17 @@
             </div>
         </div>*@
 </section>
+<script>
+    document.getElementById("contact-form").addEventListener("keyup", function () {
+        var name = document.getElementById('reqname').value;
+        var mail = document.getElementById('reqmail').value;
+        var message = document.getElementById('reqmessage').value;
+        if (name !== '' && mail !== '' && message !== '') {
+            document.getElementById('butt').removeAttribute("disabled");
+        } else {
+            document.getElementById('butt').setAttribute("disabled", null);
+        }
+    });
+</script>
+
 
