--- a/CommunityKitchen/Assets/css/style.css
+++ b/CommunityKitchen/Assets/css/style.css
@@ -1141,10 +1141,10 @@ input, textarea {
 
 #kati3 {
     position: absolute;
-    top: 0;
+    top: 87px;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 75%;
+    height: 75%;
     display: flex;
     justify-content: center;
     align-items: center;
