--- a/CommunityKitchen/Views/Home/Index.cshtml
+++ b/CommunityKitchen/Views/Home/Index.cshtml
@@ -109,11 +109,9 @@
                             var res = Math.Round((100 * cause.CurrentAmmount) / cause.TargetGoal);
 
                             <div class="item">
-
                                 <div class="clearfix bg-area">
-
                                     <div id="imgdi" class="content">
-                                        <img id="imgkat" src="~/Assets/images/missions/pr.jpg" alt="" />
+                                        <img id="imgkat" src="~/Assets/images/ImagesSaved/@cause.Photo" style="width:1550px; object-fit:cover;" />
                                         <div id="kati2">
 
                                             <div id="logia"><h4 style="color: black;">@cause.Title</h4><br /><h4 style="color: red;"><span style="color: black;">Descriprion:</span> <br />@cause.Description</h4> </div>
