--- a/CommunityKitchen/Views/Shared/Components/_NavBar.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_NavBar.cshtml
@@ -5,7 +5,7 @@
     var roleAdmin = User.IsInRole("SuperAdmin") || User.IsInRole("Admin");
     var roleDonor = User.IsInRole("Donor") || User.IsInRole("SuperAdmin") || User.IsInRole("Admin");
 }
-<div class="text-justify col-md-7 d-flex menu-column">
+<div class="text-justify col-md-7 d-flex menu-column" style="justify-content: space-around;">
     <nav class="main-menu navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
