--- a/CommunityKitchen/Assets/css/style.css
+++ b/CommunityKitchen/Assets/css/style.css
@@ -1519,7 +1519,8 @@ input, textarea {
         top: 0px;
         width: 100%;
         height: 100%;
-        background: rgba(34, 34, 34, 0.53);
+        background-image: url('../images/ImagesSaved/hugs.jpg');
+        background-size:cover;
         z-index: 0;
     }
 
