--- a/CommunityKitchen/Views/Cause/CauseIndex.cshtml
+++ b/CommunityKitchen/Views/Cause/CauseIndex.cshtml
@@ -5,18 +5,14 @@
 }
 
 <section class="page-banner">
-    <div class="container">
+    <div class="container" style="height:200px;">
         <div class="title">
             <h1>all <span>Causes</span></h1>
         </div>
         <div class="text">
-            <p>Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore </p>
+            <p></p>
         </div>
         <div class="breadcumb-wrapper">
-            <ul class="list-inline link-list">
-                <li><a href="index.html">Home</a></li>
-                <li>Causes</li>
-            </ul>
         </div>
     </div>
 </section>
@@ -24,19 +20,19 @@
 <section class="recent-causes">
     <div class="container">
         <div class="section-title">
-            <h5>HELP to THE poor People</h5>
+            <h5>HELP The Poor People</h5>
             <h1>recent <span>causes</span></h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+            <p>Volunteering your time, money, or energy to help others doesn’t just make the world better—it also makes you better. Studies indicate that the very act of giving back to the community boosts your happiness, health, and sense of well-being.</p>
         </div>
         @if (ViewBag.CurrentSortOrder == "AS")
         {
-            @Html.ActionLink("Ascending", "CauseIndex", new { sortOrder = ViewBag.CurrentSortOrder }, new { @class = "thm-btn style-2" })
-            @Html.ActionLink("Descending", "CauseIndex", new { sortOrder = ViewBag.CurrentSortOrder }, new { @class = "thm-btn style-2" })
+            @Html.ActionLink("⬆", "CauseIndex", new { sortOrder = ViewBag.CurrentSortOrder }, new { @class = "thm-btn style-2" })
+            @Html.ActionLink("⬇", "CauseIndex", new { sortOrder = ViewBag.CurrentSortOrder }, new { @class = "thm-btn style-2" })
         }
         else
         {
-            @Html.ActionLink("Ascending", "CauseIndex", new { sortOrder = ViewBag.CurrentSortOrder }, new { @class = "thm-btn style-2" })
-            @Html.ActionLink("Descending", "CauseIndex", new { sortOrder = ViewBag.CurrentSortOrder }, new { @class = "thm-btn style-2" })
+            @Html.ActionLink("⬆", "CauseIndex", new { sortOrder = ViewBag.CurrentSortOrder }, new { @class = "thm-btn style-2" })
+            @Html.ActionLink("⬇", "CauseIndex", new { sortOrder = ViewBag.CurrentSortOrder }, new { @class = "thm-btn style-2" })
         }
 
         <div class="default-form-area" style="justify-content: left">
@@ -46,7 +42,7 @@
                         <br />
                         <form style="display: -webkit-box" action="/Cause/CauseIndex" method="get">
                             <br />
-                            <input class="form-control text-box single-line " type="text" name="searchString" value="@ViewBag.searchString" placeholder="search by title" />
+                            <input class="form-control text-box single-line " type="text" name="searchString" value="@ViewBag.searchString" placeholder="Search by title" />
                             <input class="thm-btn style-1 m-1" type="submit" value="Search" />
                             <input class="thm-btn style-1" id="reset" type="reset" value="Clear" />
                         </form>
