--- a/CommunityKitchen/Views/Shared/Components/_Header.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_Header.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="boxed_wrapper" style="padding-top:10px; padding-bottom:5px;">
+﻿@using Microsoft.Owin.Security
+<div class="boxed_wrapper" style="padding-top:10px; padding-bottom:5px;">
     <header class="top-bar">
         <div class="container">
             <div class="column left">
@@ -11,15 +12,23 @@
                 <ul class="social">
                     <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                     <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                    <li>
+                        <form action="/Account/ExternalLogin" method="post">
+                            <input name="__RequestVerificationToken" type="hidden" value="uZYQRWqq0jJmBI_KqegDoPoRxi-8kJ-PumXWyQJ4DakeP25iBUlsBvLJRwCHWZY8O3J_wF4LF8yYBHM108VbsvAyJoT23BiU5oR4HcApxlY1">            <div id="socialLoginList">
+                                <p>
+                                    <button type="submit" class="btn btn-default" id="Google" name="provider" value="Google" title="Log in using your Google account"><i class="fa fa-google"></i></button>
+                                </p>
+                            </div>
+                        </form>
+                    </li>
                 </ul>
             </div>
             <div class="column right">
                 <ul class="login-info">
                     @if (!User.Identity.IsAuthenticated)
                     {
-                    <li><a onclick="loginToggle()" id="logi" href="#"><i class="icon fa fa-arrow-circle-down"></i>login</a></li>
-                    <li><a onclick="signupToggle()" id="logi" href="#"><i class="icon fa fa-user"></i>signup</a></li>
+                        <li><a onclick="loginToggle()" id="logi" href="#"><i class="icon fa fa-arrow-circle-down"></i>login</a></li>
+                        <li><a onclick="signupToggle()" id="logi" href="#"><i class="icon fa fa-user"></i>signup</a></li>
                     }
                 </ul>
             </div>
