--- a/CommunityKitchen/Views/Home/Index.cshtml
+++ b/CommunityKitchen/Views/Home/Index.cshtml
@@ -32,7 +32,7 @@
                         <div class="slide-content-box center">
                             <h4>Thousands of people could use your help!</h4>
                             <h1><span>help</span> those in <span>need</span></h1>
-                            <p>It's the first step to realise you can help<br>the next one is, just DO ET </p>
+                            <p>It's the first step to realise you can help<br>the next one is, just do it! </p>
                         </div>
                     </div>
                     <div class="tp-caption tp-resizeme"
