--- a/CommunityKitchen/Views/Shared/Components/_LogIn.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_LogIn.cshtml
@@ -93,7 +93,7 @@
 
              function UserCheck() {
             $("#stat").html("Checking...");
-            $.post("@Url.Action("CheckUsernameAvailability", "Cause")",
+            $.post("@Url.Action("CheckUsernameAvailability", "ApplicationUser")",
             {
                     userdata: $("#Email").val()
             },
@@ -103,8 +103,6 @@
                 }
                 else {
                     $("#stat").html('<font color="Red">Is Already Exists. </font>');
-                    
-
                 }
 
                 })
