--- a/CommunityKitchen/Views/Shared/Components/_Header.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_Header.cshtml
@@ -12,15 +12,7 @@
                 <ul class="social">
                     <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                     <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li>
-                        <form action="/Account/ExternalLogin" method="post">
-                            <input name="__RequestVerificationToken" type="hidden" value="uZYQRWqq0jJmBI_KqegDoPoRxi-8kJ-PumXWyQJ4DakeP25iBUlsBvLJRwCHWZY8O3J_wF4LF8yYBHM108VbsvAyJoT23BiU5oR4HcApxlY1">            <div id="socialLoginList">
-                                <p>
-                                    <button type="submit" class="btn btn-default" id="Google" name="provider" value="Google" title="Log in using your Google account"><i class="fa fa-google"></i></button>
-                                </p>
-                            </div>
-                        </form>
-                    </li>
+                    <li><a href="#"><i class="fa fa-google"></i></a></li>
                 </ul>
             </div>
             <div class="column right">
