--- a/CommunityKitchen/Views/Shared/Components/_LogIn.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_LogIn.cshtml
@@ -29,8 +29,8 @@
                         <img src="https://img.icons8.com/external-nawicon-glyph-nawicon/64/000000/external-email-communication-nawicon-glyph-nawicon.png" />
                     </div>
                     <input id="password" type="password" name="Password" placeholder="Password" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[$!%*?&])[A-Za-z\d$!%*?&]{6,}$"
-                           title="Must contain at least one number and one uppercase letter and one special character,minimum 6 characters" required >
-                    <input id="confpassword" type="password" name="ConfirmPassword" placeholder="Confirm password" minlength="6"  >
+                           title="Must contain at least one number and one uppercase letter and one special character,minimum 6 characters" required>
+                    <input id="confpassword" type="password" name="ConfirmPassword" placeholder="Confirm password" minlength="6">
                     <div class="img4">
                         <img src="https://img.icons8.com/ios-glyphs/30/000000/password--v1.png" />
                         <img src="https://img.icons8.com/ios-glyphs/30/000000/password--v1.png" />
@@ -63,7 +63,7 @@
                     <img src="https://img.icons8.com/ios-glyphs/30/000000/password--v1.png" />
                 </div>
 
-                <label class="remeber"><input type="checkbox" value="true"  name="RememberMe">Remember me</label>
+                <label class="remeber"><input type="checkbox" value="true" name="RememberMe">Remember me</label>
 
                 <div class="inputBx">
                     <input id="sub" type="submit" value="Login">
@@ -76,11 +76,15 @@
             <p>Login with social media</p>
             <ul class="sci">
                 <li>
-                    <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-                    </fb:login-button>
+                    <form action="/Account/ExternalLogin" method="post">
+                        @Html.AntiForgeryToken()
+                        <div id="socialLoginList">
+                            <p>
+                                <button type="submit" class="btn btn-default" id="Google" name="provider" value="Google" title="Log in using your Google account"><i class="fa fa-google"></i></button>
+                            </p>
+                        </div>
+                    </form>
                 </li>
-                <li><img src="https://img.icons8.com/color/48/000000/twitter--v1.png" /></li>
-                <li><img src="https://img.icons8.com/color/48/000000/instagram-new--v1.png" /></li>
             </ul>
         </div>
     </div>
