--- a/CommunityKitchen/Views/Shared/Components/_Header.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_Header.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.Owin.Security
-<div class="boxed_wrapper" style="padding-top:10px; padding-bottom:5px;">
+<div class="boxed_wrapper" style="margin-bottom: 10px; margin-top: 10px; ">
     <header class="top-bar">
         <div class="container">
             <div class="column left">
