--- a/CommunityKitchen/Views/Shared/Components/_Footer.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_Footer.cshtml
@@ -54,7 +54,7 @@
 
                 <p>
                     CHARITY  SYMPATHY
-                    <hr /> ~ Non Profit Community ~
+                    <hr /> ~ Non-Profit  Organization ~
                 </p>
             </div>
 
@@ -67,7 +67,9 @@
                         <div class="footer-widget information-widget">
                             <h3 class="footer-title">Information</h3>
                             <div class="widget-content">
-                                <div class="text"><p>Lorem ipsum dolor sit amet, consecttur adipiscing egestas rhoncus Praesent Nunc pretium est placerat congue</p> </div>
+                                <div class="text">
+                                <p>We are a non-profit organization following a sole purpose; 
+                                 Raising money for charity purposes of any kind. Join us in our effort to make this world better !</p> </div>
                                 <ul class="contact-info">
                                     <li><span class="fa fa-map-marker"></span>Karaoli Dhmhtriou 48, Athens</li>
                                     <li><span class="fa fa-envelope-o"></span> charitysupport@user.com</li>
@@ -82,20 +84,20 @@
                     <div class="footer-column m-4">
 
                         <div class="footer-widget works-widget">
-                            <h3 class="footer-title">Latest Works</h3>
+                            <h3 class="footer-title">Latest News</h3>
                             <div class="widget-content">
                                 <ul class="list">
                                     <li>
-                                        <h5>Food is Giving to them</h5>
-                                        <p> <span>July 29, 2017</span></p>
+                                        <h5>Shared Love meals with people</h5>
+                                        <p> <span>Port of Peraius, March 29, 2022</span></p>
                                     </li>
                                     <li>
-                                        <h5>Buy some candy for children</h5>
-                                        <p> <span>February 15, 2017</span></p>
+                                        <h5>Raised money for the wellness of children</h5>
+                                        <p> <span>Melenikou 26, February 15, 2022</span></p>
                                     </li>
                                     <li>
-                                        <h5>Build a building for shelter</h5>
-                                        <p><span> July 29, 2017</span></p>
+                                        <h5>A shelter was built for the homeless of Navarinou Square</h5>
+                                        <p><span>Navarinou Square, November 22, 2021</span></p>
                                     </li>
                                 </ul>
                             </div>
@@ -243,7 +245,7 @@
     <div class="footer-bottom">
         <div class="container">
             <div class="text">
-                <p><span>Community Kitchen</span> 2022. All Rights Reserved</p>
+                <p><span>Charity Sympathy</span> 2022. All Rights Reserved</p>
             </div>
         </div><!-- /.container -->
     </div>
