--- a/CommunityKitchen/Assets/css/signuplogin.css
+++ b/CommunityKitchen/Assets/css/signuplogin.css
@@ -4,7 +4,7 @@
     top: 40%;
     left: 50%;
     transform: translate(-50%,-50%);
-    background: rgb(252, 255, 255,0.7);
+    background: rgb(252, 255, 255, 0.78);
     border-radius: 42px;
     box-shadow: 10px 10px 42px rgb(0, 0, 0,0.2);
     transition: .5s;
@@ -22,7 +22,7 @@
     bottom: 5px;
     border-radius: 42px;
     pointer-events: none;
-    background: linear-gradient(to bottom,rgba(255,255,255,0.3)0%, rgba(255,255,255,0.1) 15%,transparent 50%,transparent 85%,rgba(255,255,255,0.3)100%);
+    background: linear-gradient(to bottom,#ff2e3d0%, rgba(255,255,255,0.1) 15%,transparent 50%,transparent 85%,#ff2e3d100%);
 }
 
 .form {
@@ -36,12 +36,12 @@
 }
 
 .form .text h2 {
-    color: #607d8b;
+    color: #00000099;
     font-weight: 600;
     font-size: 1.5em;
     text-transform: uppercase;
     margin-bottom: 20px;
-    border-bottom: 4px solid #ff4584;
+    border-bottom: 4px;
     display: inline-block;
     letter-spacing: 1px;
 }
@@ -73,7 +73,7 @@
 .form .inputBx input {
     width: 100%;
     display: block;
-    border: 1px solid rgba(255, 255, 255, 0.2);
+    border: 1px solid rgb(0, 0, 0,  0.51);
     background: transparent;
     border-radius: 12px;
     padding: 20px 16px;
@@ -82,23 +82,22 @@
     font-size: 16px;
     font-weight: 300;
     outline: none;
-    box-shadow: inset 0 0 25px rgba(0, 0, 0, 0.2);
+    box-shadow: inset 0 0 25px rgb(0, 0, 0, 0.05);
 }
 
 .form .inputBx input:hover {
-    border-color: #ff2e3d;
-    box-shadow: 0 0 8px 0 #ff2e3d;
+    border-color: #607d8b;
     cursor: pointer;
 }
 
 .form .inputBx input:focus {
-    border-color: #ff2e3d;
-    box-shadow: 0 0 8px 0 #ff2e3d;
+    border-color: #607d8b;
+    box-shadow: 0 0 3px 0 rgba(255,255,255,0.1);
 }
 
 .inputBx a {
     text-decoration: none;
-    color: #ff2e3d;
+    color: #891118;
 }
 
 .inputBx a:hover {
@@ -113,19 +112,19 @@
     filter: drop-shadow(2px 3px 3px black);
 }
 
-.remeber {
+.remember {
     position: relative;
     display: inline;
-    color: #607d8b;
+    color: #678897;
     font-weight: 300;
     cursor: pointer;
-    font-size: 25px;
+    font-size: 20px;
 }
 
 input[type=checkbox] {
     margin: 5px;
     width: 18px;
-    height: 18px;
+    height: 13px;
     display: inline;
 }
 
