--- a/CommunityKitchen/Assets/css/style.css
+++ b/CommunityKitchen/Assets/css/style.css
@@ -378,6 +378,7 @@ input, textarea {
 .section-title {
     position: relative;
     margin-bottom: 20px;
+    margin-top: 100px;
 }
 
     .section-title h5 {
@@ -702,6 +703,7 @@ input, textarea {
 
 .theme_menu {
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    margin-bottom:-126px;
     position: relative;
     z-index: 2;
     background: rgba(0, 0, 0, 0.17);
