--- a/CommunityKitchen/Views/Account/Register.cshtml
+++ b/CommunityKitchen/Views/Account/Register.cshtml
@@ -8,8 +8,9 @@
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Create a new account.</h4>
-    <hr />
+    <div class="glyphicon-registration-mark-form">
+        <h4>Create a new account.</h4>
+    </div>
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
