--- a/CommunityKitchen/Views/Event/EventsIndex.cshtml
+++ b/CommunityKitchen/Views/Event/EventsIndex.cshtml
@@ -11,8 +11,8 @@
     <div class="container">
         <div class="section-title">
             <h5>going to raise humanity</h5>
-            <h1>upcoming <span>event</span></h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+            <h1>upcoming <span>events</span></h1>
+            <p>Here are the latest charity events in the town. Feel free to participate!</p>
         </div>
 
 
