--- a/CommunityKitchen/Views/Shared/Components/_LogIn.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_LogIn.cshtml
@@ -8,7 +8,7 @@
         <div class="form">
             <div class="close" onclick="signupToggle()">&times;</div>
             <div class="text">
-                <h2>Register Form</h2>
+                <h2>Register Now</h2>
             </div>
             <form method="post" action="/Account/Register">
                 @Html.AntiForgeryToken()
@@ -29,8 +29,8 @@
                     <div class="img2">
                         <img src="https://img.icons8.com/external-nawicon-glyph-nawicon/64/000000/external-email-communication-nawicon-glyph-nawicon.png" />
                     </div>
-                    <input id="password" type="password" name="Password" placeholder="Password" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[$!%*?&])[A-Za-z\d$!%*?&]{6,}$"
-                           title="Must contain at least one number and one uppercase letter and one special character,minimum 6 characters" required>
+                    <input id="password" type="password" name="Password" placeholder="Password" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[A-Za-z\d$!%*?&]{6,}$"
+                           title="Must contain at least one number, one uppercase letter and one special character, minimum 6 characters" required>
                     <input id="confpassword" type="password" name="ConfirmPassword" placeholder="Confirm password" minlength="6">
                     <div class="img4">
                         <img src="https://img.icons8.com/ios-glyphs/30/000000/password--v1.png" />
@@ -40,7 +40,15 @@
                         <input id="sub" type="submit" value="Register">
                     </div>
                     <div class="inputBx">
-                        <p>ALREADY HAVE AN ACCOUNT? <a onclick="signinToggle()" href="#">Sign in</a></p>
+                        <p>Already Have An Account? <a onclick="signinToggle()" href="#">Sign in</a></p>
+                    </div>
+                </div>
+            </form>
+            <form action="/Account/ExternalLogin" method="post">
+                @Html.AntiForgeryToken()
+                <div id="socialLoginList">
+                    <div class="inputBx">
+                        <p>Login using other accounts <i type="submit" class="btn btn-default" style="color:brown;" id="Google" name="provider" value="Google" title="Log in using your Google account">Google</i></p>
                     </div>
                 </div>
             </form>
@@ -55,7 +63,7 @@
             <form method="post" action="/Account/Login">
                 @Html.AntiForgeryToken()
                 <div class="inputBx">
-                    <input type="text" name="Email" placeholder="UserName">
+                    <input type="text" name="Email" placeholder="Username">
                     <img src="https://img.icons8.com/ios-glyphs/30/000000/user--v1.png" />
                 </div>
 
@@ -64,29 +72,28 @@
                     <img src="https://img.icons8.com/ios-glyphs/30/000000/password--v1.png" />
                 </div>
 
-                <label class="remeber"><input type="checkbox" value="true" name="RememberMe">Remember me</label>
+                <label class="remember"><input type="checkbox" value="true" name="RememberMe">Remember me</label>
 
                 <div class="inputBx">
                     <input id="sub" type="submit" value="Login">
                 </div>
                 <div class="inputBx">
                     <p>Forgot your <a href="#">Password?</a></p>
-                    <p>You don't have an account?  <a onclick="registerToggle()" href="#">Sign up</a></p>
+                    <p>You don't have an account?  <a onclick="registerToggle()" href="#" style="">Sign Up</a></p>
                 </div>
+                <p>Login using other accounts</p>
             </form>
-            <p>Login with social media</p>
-            <ul class="sci">
-                <li>
-                    <form action="/Account/ExternalLogin" method="post">
-                        @Html.AntiForgeryToken()
-                        <div id="socialLoginList">
-                            <p>
-                                <button type="submit" class="btn btn-default" id="Google" name="provider" value="Google" title="Log in using your Google account"><i class="fa fa-google"></i></button>
-                            </p>
+            
+                <form action="/Account/ExternalLogin" method="post">
+                    @Html.AntiForgeryToken()
+                    <div id="socialLoginList">
+                        <div class="inputBx">
+                            <button type="submit" class="btn btn-default" style="color:brown;" id="Google" name="provider" value="Google" title="Log in using your Google account">Google</button>
                         </div>
-                    </form>
-                </li>
-            </ul>
+                    </div>
+                </form>
+            
+            
         </div>
     </div>
 
@@ -103,10 +110,10 @@
             },
             function (data) {
                 if (data == 0) {
-                    $("#stat").html('<font color="Green">Available !. </font>');
+                    $("#stat").html('<font color="darkgreen">Username Available </font>');
                 }
                 else {
-                    $("#stat").html('<font color="Red">Is Already Exists. </font>');
+                    $("#stat").html('<font color="Red">Username Already Exists </font>');
                 }
 
                 })
