--- a/CommunityKitchen/Views/Event/EventsIndex.cshtml
+++ b/CommunityKitchen/Views/Event/EventsIndex.cshtml
@@ -8,11 +8,11 @@
 
 <!--start upcoming-event-->
 <section class="all-event">
-    <div class="container">
+    <div class="container upcoming-event">
         <div class="section-title">
             <h5>going to raise humanity</h5>
             <h1>upcoming <span>events</span></h1>
-            <p>Here are the latest charity events in the town. Feel free to participate!</p>
+            <p>Here are the latest charity events in the town. Come say hi!</p>
         </div>
 
 
