--- a/CommunityKitchen/Views/Home/About.cshtml
+++ b/CommunityKitchen/Views/Home/About.cshtml
@@ -1,7 +1,20 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "About Us";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
-
-<p>Use this area to provide additional information.</p>
+<section class="page-banner">
+    <div class="container about-us">
+		<div class="title">
+            <h1>about <span>us</span></h1>
+        </div>
+        <div class="text">
+			<p>Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore </p>
+		</div>
+		<div class="breadcumb-wrapper">
+            <ul class="list-inline link-list">
+                <li><a href="index.html">Home</a></li>
+                <li>about</li>
+            </ul>
+        </div>
+    </div>
+</section>
+<p>We work together, we design, we create and produce web app environments that target on improving the society efficiently.</p>
