--- a/CommunityKitchen/Views/Cause/CauseIndex.cshtml
+++ b/CommunityKitchen/Views/Cause/CauseIndex.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "CauseIndex";
 }
 
-<section class="page-banner">
+<section class="page-banner" style="background-image:url('../Assets/images/ImagesSaved/hugs.jpg');">
     <div class="container" style="height:200px;">
         <div class="title">
             <h1>all <span>Causes</span></h1>
