--- a/CommunityKitchen/Views/Home/Contact.cshtml
+++ b/CommunityKitchen/Views/Home/Contact.cshtml
@@ -83,7 +83,7 @@
                     </div>
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <div class="form-group">
-                            <input type="text" name="form_phone" class="form-control" value="" placeholder="Phone">
+                            <input style="background-color:#fff" type="number" name="form_phone" class="form-control" value="" placeholder="Phone">
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-6 col-xs-12">
