--- a/CommunityKitchen/Assets/css/style.css
+++ b/CommunityKitchen/Assets/css/style.css
@@ -1521,8 +1521,6 @@ input, textarea {
         top: 0px;
         width: 100%;
         height: 100%;
-        background-image: url('../images/ImagesSaved/hugs.jpg');
-        background-size:cover;
         z-index: 0;
     }
 
@@ -1551,6 +1549,7 @@ input, textarea {
             z-index: 1;
             position: relative;
         }
+
 
 .breadcumb-wrapper {
     z-index: 1;
@@ -2636,7 +2635,18 @@ input, textarea {
     padding-top:200px;
 
 }
-/*
+
+.meet-us{
+    padding-top:20px;
+    padding-bottom:20px;
+    line-break: loose;
+}
+
+.our-pics{
+    justify-content: space-around;
+}
+
+
 ====================================================================
   15. google map Section
 ====================================================================
@@ -5436,11 +5446,14 @@ Project styles
 
             .our-team .item-box .item .image-box img {
                 width: 100%;
+                height:360px;
+                border-radius:3px;
             }
 
             .our-team .item-box .item .content-box {
                 padding: 25px 22px 26px;
                 border: 1px solid #ececec;
+                border-radius:5px;
             }
 
                 .our-team .item-box .item .content-box h4 {
@@ -6777,6 +6790,9 @@ Project styles
                 background: url(../images/resources/noksha.png) center left no-repeat;
             }
 */
+        .s-cause{
+            padding-top:100px;
+        }
         .single-cause .content-box .title span {
             color: #ff2e3d;
         }
