--- a/CommunityKitchen/Views/Home/About.cshtml
+++ b/CommunityKitchen/Views/Home/About.cshtml
@@ -1,20 +1,141 @@
 ﻿@{
     ViewBag.Title = "About Us";
 }
-<section class="page-banner">
-    <div class="container about-us">
-		<div class="title">
-            <h1>about <span>us</span></h1>
+@*@model IEnumerable<Entities.Cause>
+
+    @{
+        ViewBag.Title = "CauseIndex";
+    }*@
+
+<section class="page-banner" style="padding-top:180px; padding-bottom:20px; background-image: url('../Assets/images/ImagesSaved/hugs.jpg');">
+    <div class="container" style="height:90px;">
+        <div class="section-title">
+            <h1>about <span style="font-style:italic;">us</span></h1>
         </div>
-        <div class="text">
-			<p>Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore </p>
-		</div>
-		<div class="breadcumb-wrapper">
-            <ul class="list-inline link-list">
-                <li><a href="index.html">Home</a></li>
-                <li>about</li>
-            </ul>
+        <div class="section-title" style="padding-top:30px;">
+            <h5>meet our team today</h5>
+            <div class="meet-us">
+                <p style="line-height: 1.7em;">We work together, we design, we create and produce web app environments that target on improving the society efficiently.</p>
+            </div>
+        </div>
+        <div class="breadcumb-wrapper">
         </div>
     </div>
 </section>
-<p>We work together, we design, we create and produce web app environments that target on improving the society efficiently.</p>
+<!--start our-team-->
+<section class="our-team style-two">
+    <div class="container">
+        <div class="item-box">
+            <div class="row d-flex justify-content-center" style="padding-top:100px;">
+                <div class="col-4 col-xs-12">
+                    <div class="item">
+                        <div class="bg-area">
+                            <div class="image-box">
+                                <img src="~/Assets/images/team/dimitris.jpg" />
+                            </div>
+                            <div class="content-box">
+                                <h4>Dimitris Stratsianis</h4>
+                                <div class="text">
+                                    <p>Team Leader - Backend Engineer</p>
+                                </div>
+                                <ul class="social">
+                                    <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                                    <li><a href="#"><span class="fa fa-twitter"></span></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-4 col-xs-12">
+                    <div class="item">
+                        <div class="bg-area">
+                            <div class="image-box" style="width:220px; margin-left:70px;">
+                                <img src="~/Assets/images/team/ioanis.jpg" />
+                            </div>
+                            <div class="content-box">
+                                <h4>Karakasidis Ioannis</h4>
+                                <div class="text">
+                                    <p>Full Stack .Net Dev</p>
+                                </div>
+                                <ul class="social">
+                                    <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                                    <li><a href="#"><span class="fa fa-twitter"></span></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-4 col-xs-12">
+                    <div class="item">
+                        <div class="bg-area">
+                            <div class="image-box">
+                                <img src="~/Assets/images/team/laptop.jpeg" />
+                            </div>
+                            <div class="content-box">
+                                <h4>Mihailidis Giannis</h4>
+
+                                <div class="text">
+                                    <p>Full Stack .Net Dev</p>
+                                </div>
+                                <ul class="social">
+                                    <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                                    <li><a href="#"><span class="fa fa-twitter"></span></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row d-flex justify-content-center" style="padding-top:60px;">
+                <div class="col-4 col-xs-12">
+                    <div class="item">
+                        <div class="bg-area">
+                            <div class="image-box">
+                                <img src="~/Assets/images/team/niki.jpg" />
+                            </div>
+                            <div class="content-box">
+                                <h4>Niki Theofilaktidou</h4>
+
+                                <div class="text">
+                                    <p>Full Stack .Net Dev</p>
+                                </div>
+                                <ul class="social">
+                                    <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                                    <li><a href="#"><span class="fa fa-twitter"></span></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-4 col-xs-12">
+                    <div class="item">
+                        <div class="bg-area">
+                            <div class="image-box">
+                                <img src="~/Assets/images/team/doggo2.jpg" />
+
+                            </div>
+                            <div class="content-box">
+                                <h4>Likos Costas</h4>
+
+                                <div class="text">
+                                    <p>Full Stack .Net Dev</p>
+                                </div>
+                                <ul class="social">
+                                    <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                                    <li><a href="#"><span class="fa fa-twitter"></span></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+
+    </div>
+</section>
+<!--end our-team-->
