--- a/CommunityKitchen/Views/Home/About.cshtml
+++ b/CommunityKitchen/Views/Home/About.cshtml
@@ -3,18 +3,19 @@
 }
 @*@model IEnumerable<Entities.Cause>
 
-    @{
-        ViewBag.Title = "CauseIndex";
-    }*@
+        @{
+            ViewBag.Title = "CauseIndex";
+    <img src="~/Assets/images/team/rangersss.jpg" />
+        }*@
 
-<section class="page-banner" style="padding-top:180px; padding-bottom:20px; background-image: url('../Assets/images/ImagesSaved/hugs.jpg');">
+<section class="page-banner" style="padding-top: 180px; padding-bottom: 20px; background-image: url('../Assets/images/team/rangersss.jpg'); ">
     <div class="container" style="height:90px;">
         <div class="section-title">
-            <h1>about <span style="font-style:italic;">us</span></h1>
+            <h1><span style="color: #fff;">about </span> <span style="font-style:italic;">us</span></h1>
         </div>
         <div class="section-title" style="padding-top:30px;">
             <h5>meet our team today</h5>
-            <div class="meet-us">
+            <div class="meet-us" style="padding-bottom:20px;">
                 <p style="line-height: 1.7em;">We work together, we design, we create and produce web app environments that target on improving the society efficiently.</p>
             </div>
         </div>
@@ -23,20 +24,20 @@
     </div>
 </section>
 <!--start our-team-->
-<section class="our-team style-two">
+<section class="our-team style-two" style="margin-top:80px;">
     <div class="container">
         <div class="item-box">
-            <div class="row d-flex justify-content-center" style="padding-top:100px;">
-                <div class="col-4 col-xs-12">
+            <div class="row d-flex justify-content-start" style="display:inline;">
+                <div class="col-2 col-md-3 col-xs-12">
                     <div class="item">
                         <div class="bg-area">
-                            <div class="image-box">
-                                <img src="~/Assets/images/team/dimitris.jpg" />
+                            <div class="image-box-team" style="padding-left:30px;">
+                                <img src="~/Assets/images/team/Mmpr-red.jpg" style="height: 380px; width: 200px; padding-bottom: 20px" />
                             </div>
                             <div class="content-box">
                                 <h4>Dimitris Stratsianis</h4>
                                 <div class="text">
-                                    <p>Team Leader - Backend Engineer</p>
+                                    <p>Team Leader - Backend Engineer (The pun guy)</p>
                                 </div>
                                 <ul class="social">
                                     <li><a href="#"><span class="fa fa-facebook"></span></a></li>
@@ -47,16 +48,17 @@
                     </div>
                 </div>
 
-                <div class="col-4 col-xs-12">
+                <div class="col-4 col-md-3  col-xs-12">
                     <div class="item">
                         <div class="bg-area">
-                            <div class="image-box" style="width:220px; margin-left:70px;">
-                                <img src="~/Assets/images/team/ioanis.jpg" />
+                            <div class="image-box-team" style="padding-left:30px;">
+                                <img src="~/Assets/images/team/Mmpr-blue.jpg" style="height:380px;width:200px; padding-bottom:20px" />
                             </div>
                             <div class="content-box">
-                                <h4>Karakasidis Ioannis</h4>
+                                <h4>Ioannis Karakasidis</h4>
                                 <div class="text">
-                                    <p>Full Stack .Net Dev</p>
+                                    <p>Full Stack .Net Developer</p>
+                                    <p>(The musician)</p>
                                 </div>
                                 <ul class="social">
                                     <li><a href="#"><span class="fa fa-facebook"></span></a></li>
@@ -67,17 +69,17 @@
                     </div>
                 </div>
 
-                <div class="col-4 col-xs-12">
+                <div class="col-4 col-md-3  col-xs-12">
                     <div class="item">
                         <div class="bg-area">
-                            <div class="image-box">
-                                <img src="~/Assets/images/team/laptop.jpeg" />
+                            <div class="image-box-team" style="padding-left:30px;">
+                                <img src="~/Assets/images/team/greenranger.jpg" style="height:380px;width:200px; padding-bottom:20px" />
                             </div>
                             <div class="content-box">
-                                <h4>Mihailidis Giannis</h4>
-
+                                <h4>Giannis</h4><h4> Mihailidis</h4>
                                 <div class="text">
-                                    <p>Full Stack .Net Dev</p>
+                                    <p>Full Stack .Net Developer</p>
+                                    <p>(The front genius)</p>
                                 </div>
                                 <ul class="social">
                                     <li><a href="#"><span class="fa fa-facebook"></span></a></li>
@@ -87,19 +89,18 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="row d-flex justify-content-center" style="padding-top:60px;">
-                <div class="col-4 col-xs-12">
+
+                <div class="col-4 col-md-3  col-xs-12">
                     <div class="item">
                         <div class="bg-area">
-                            <div class="image-box">
-                                <img src="~/Assets/images/team/niki.jpg" />
+                            <div class="image-box-team" style="padding-left:30px;">
+                                <img src="~/Assets/images/team/yellow.jpg" style="height:380px;width:200px; padding-bottom:20px" />
                             </div>
                             <div class="content-box">
-                                <h4>Niki Theofilaktidou</h4>
-
+                                <h4>Theofilaktidou Niki</h4>
                                 <div class="text">
-                                    <p>Full Stack .Net Dev</p>
+                                    <p>Full Stack .Net Developer</p>
+                                    <p>(The math brain)</p>
                                 </div>
                                 <ul class="social">
                                     <li><a href="#"><span class="fa fa-facebook"></span></a></li>
@@ -109,19 +110,17 @@
                         </div>
                     </div>
                 </div>
-
-                <div class="col-4 col-xs-12">
+                <div class="col-4 col-md-3  col-xs-12">
                     <div class="item">
                         <div class="bg-area">
-                            <div class="image-box">
-                                <img src="~/Assets/images/team/doggo2.jpg" />
-
+                            <div class="image-box-team" style="padding-left:30px;">
+                                <img src="~/Assets/images/team/Mmpr-black.jpg" style="height:380px;width:200px; padding-bottom:20px" />
                             </div>
                             <div class="content-box">
-                                <h4>Likos Costas</h4>
-
+                                <h4>Likos</h4><h4> Costas</h4>
                                 <div class="text">
-                                    <p>Full Stack .Net Dev</p>
+                                    <p>Full Stack .Net Developer</p>
+                                    <p>(Afirimeni Texni)</p>
                                 </div>
                                 <ul class="social">
                                     <li><a href="#"><span class="fa fa-facebook"></span></a></li>
@@ -131,11 +130,10 @@
                         </div>
                     </div>
                 </div>
-
 
             </div>
         </div>
-
     </div>
+    
 </section>
 <!--end our-team-->
